# pv-cser-pro

./: .env.example  PROJECT_STRUCTURE.md  README.md  SKILLS.md  alembic.ini  app.py  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements-test.txt  requirements.txt
.streamlit/: config.toml  secrets.toml.example
alembic/: env.py
alembic/versions/: 20241226_000000_001_initial_schema.py
config/: app_config.yaml
data/climate_profiles/: iec61853_4_standards.json
data/sample_modules/: sample_module_400W.json
migrations/: init_schema.sql
scripts/: init_db.py
src/: __init__.py
src/calculations/: __init__.py  energy_yield.py  iec61853_1.py  iec_61853_1.py  iec_61853_3.py  temperature_models.py
src/climate/: __init__.py  climate_profiles.py  cser_calculator.py  interpolation.py
src/data_input/: __init__.py  module_data.py  power_matrix.py  validation.py
src/database/: __init__.py  crud.py  database.py  models.py
src/exports/: __init__.py  excel_export.py  pdf_export.py
src/utils/: __init__.py  config.py  constants.py  database.py  helpers.py  interpolation.py  logging_config.py
src/visualizations/: __init__.py  charts.py  interactive.py  plots_3d.py
tests/: __init__.py  conftest.py  test_calculations.py  test_cser.py  test_cser_calculator.py  test_database.py  test_exports.py  test_file_upload.py  test_ui_components.py  test_visualizations.py
